--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
    <h4>Web Page Using grid</h4>
    <div class="container">
    <div class="box1">Cotton Candy</div>
-   <div class="box2"><img src="images/Group 935r.jpg.png" alt="Purple Donuts"></div>
+   <div class="box2"><img src="images/Group 935r.jpg" alt="Purple Donuts"></div>
    <div class="box3"><img src="images/image 17r.jpg.png" alt="Cotton Candy"></div>
    <div class="box4"><img src="images/Group 935-1r.jpg.png" alt="Red Donuts"></div>
    <div class="box5"><img src="images/image 18r.png" alt="Pastery"></div>
